2006-11-20  Sasha Khapyorsky <sashak@voltaire.com>

	* src/rpc.c: Fix various uses of printf() style functions 

2006-10-20  Hal Rosenstock <halr@voltaire.com>

	* include/infiniband/mad.h, src/resolve.c (ib_resolve_portid_str),
	  src/smp.c (smp_set), src/mad.c (mad_build_pkt),
	  src/portid.c (portid2str): Add and handle IB_DEST_DRSLID. 

2006-10-09  Hal Rosenstock <halr@voltaire.com>

	* src/resolve.c (ib_resolve_portid_str): Use strtoull rather than
	  strtoll for IB_DEST_GUID
